[gd_scene load_steps=11 format=3 uid="uid://dqkvb17ssibys"]

[ext_resource type="Script" path="res://lib/main.gd" id="1_ibqfo"]
[ext_resource type="PackedScene" uid="uid://bcwip8bwtms3g" path="res://models/characters/amy.fbm/amy.tscn" id="2_bvm8i"]
[ext_resource type="Shader" path="res://lib/shaders/blur.gdshader" id="3_4tku2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o1bxi"]
shader = ExtResource("3_4tku2")
shader_parameter/amount = 2.0

[sub_resource type="ViewportTexture" id="ViewportTexture_1wgew"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7653g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ficls"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oxcam"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ne1n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4og5v"]

[node name="Main" type="Node3D"]
script = ExtResource("1_ibqfo")

[node name="Player" parent="." instance=ExtResource("2_bvm8i")]

[node name="Menu" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="Menu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Blur" type="TextureRect" parent="Menu/Control"]
material = SubResource("ShaderMaterial_o1bxi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_1wgew")

[node name="MarginContainer" type="MarginContainer" parent="Menu/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Control/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 100
text = "Explora Quest"

[node name="MarginContainer" type="MarginContainer" parent="Menu/Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2

[node name="StartBtn" type="Button" parent="Menu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_7653g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ficls")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxcam")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ne1n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4og5v")
text = "Continuer la partie"

[node name="SettingsBtn" type="Button" parent="Menu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_7653g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ficls")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxcam")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ne1n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4og5v")
text = "Param√®tres
"

[node name="SaveBt" type="Button" parent="Menu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_7653g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ficls")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxcam")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ne1n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4og5v")
text = "Sauvegarder"

[node name="Save&QuitBtn" type="Button" parent="Menu/Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_7653g")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ficls")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oxcam")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3ne1n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4og5v")
text = "Sauvegarder et quitter"

[connection signal="pressed" from="Menu/Control/MarginContainer/VBoxContainer/StartBtn" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Menu/Control/MarginContainer/VBoxContainer/SettingsBtn" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="Menu/Control/MarginContainer/VBoxContainer/SaveBt" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="Menu/Control/MarginContainer/VBoxContainer/Save&QuitBtn" to="." method="_on_button_save_and_quit_pressed"]
